--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,26 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="EditTextStyleOne">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/gray_dark</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
+
+    <style name="ButtonStyleAceptar">
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:background">@drawable/button_background_aceptar</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ButtonStyleCancelar">
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:background">@drawable/button_background_cancelar</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
