--- a/app/src/main/res/menu/nav_options.xml
+++ b/app/src/main/res/menu/nav_options.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:id="@+id/menu_top" android:checkableBehavior="single">
-        <item android:id="@+id/menu_counter"
-            android:title="@string/menu_counter" android:icon="@drawable/ic_wbc"/>
+        <!--item android:id="@+id/menu_counter"
+            android:title="@string/menu_counter" android:icon="@drawable/ic_wbc"/-->
         <item android:id="@+id/menu_patient"
             android:title="@string/menu_patient" android:icon="@drawable/ic_patient"/>
         <item android:id="@+id/menu_record"
