--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <!--Tamanio de textos-->
     <dimen name="titulo">20sp</dimen>
+    <dimen name="cantidad">30sp</dimen>
 </resources>
