--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,51 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_centerInParent="true"
+                android:text="@string/cantidad_total"
+                android:textColor="@color/blue_dark"
+                android:textSize="@dimen/titulo"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvCantidad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_centerInParent="true"
+                android:text="0"
+                android:textColor="@color/red80"
+                android:textSize="@dimen/cantidad"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnResultado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                style="@style/ButtonStyleResultado"
+                android:layout_centerInParent="true"
+                android:drawableLeft="@android:drawable/ic_menu_send"
+                android:text="@string/resultado"/>
+            </LinearLayout>
+    </LinearLayout>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/navView"
         android:background="#E6E6E6"
@@ -16,5 +61,4 @@
         app:headerLayout="@layout/header_navigation_drawer"
         app:menu="@menu/nav_options"
         />
-
 </android.support.v4.widget.DrawerLayout>
