--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,12 @@
         <item name="android:background">@drawable/button_background_aceptar</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="ButtonStyleResultado">
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:background">@drawable/button_background_aceptar</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
     <style name="ButtonStyleCancelar">
         <item name="android:paddingRight">16dp</item>
