--- a/app/src/main/res/layout/activity_calculo.xml
+++ b/app/src/main/res/layout/activity_calculo.xml
@@ -20,7 +20,7 @@
             android:gravity="left"
             android:text="@string/asociar_a_paciente"
             android:textColor="@color/blue_dark"
-            android:textSize="@dimen/titulo"
+            android:textSize="@dimen/subtitulo_3"
             android:textStyle="bold" />
 
         <Spinner
@@ -28,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,52 +57,119 @@
                 />
         </RelativeLayout>
 
+        <ListView
+            android:id="@+id/listViewHeaderTabla"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+        </ListView>
+        <View
+            android:layout_height="1dip"
+            android:layout_width="match_parent"
+            android:background="@color/red80"/>
+        <ListView
+            android:id="@+id/listViewTabla"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="2dp">
+        </ListView>
+
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tablaCalculo">
+            android:id="@+id/tablaResultado">
             <TableRow
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:id="@+id/filaCalculo">
+                android:background="@color/blue"
+                android:id="@+id/tablaHeaderResultado">
                 <TextView
-                    android:id="@+id/etTipoWbc"
-                    android:fontFamily="serif"
+                    android:id="@+id/tvVacio"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_weight="1"
-                    android:textColor="#000"
-                    android:text="@string/tabla_tipo"/>
+                    style="@style/HeaderStyle"
+                    android:gravity="center"
+                    android:text=""/>
                 <TextView
-                    android:id="@+id/etPorCantidad"
-                    android:textColor="#000"
-                    android:fontFamily="serif"
+                    android:id="@+id/tvConNrbc"
+                    style="@style/HeaderStyle"
+                    android:gravity="center"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_weight="1"
-                    android:text="@string/tabla_cantidad"/>
+                    android:text="@string/tabla_header_con_nrbc"/>
                 <TextView
-                    android:id="@+id/etPorcentaje"
-                    android:textColor="#000"
-                    android:fontFamily="serif"
+                    android:id="@+id/tvSinNRbc"
+                    style="@style/HeaderStyle"
+                    android:gravity="center"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_weight="1"
-                    android:text="@string/tabla_porcentaje"/>
-                <TextView
-                    android:id="@+id/etMedida"
-                    android:textColor="#000"
-                    android:fontFamily="serif"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/tabla_medida"/>
+                    android:text="@string/tabla_header_sin_nrbc"/>
             </TableRow>
             <View
-                android:layout_height="3dip"
+                android:layout_height="1dip"
                 android:layout_width="match_parent"
                 android:background="@color/red80"/>
+            <TableRow
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+                <TextView
+                    android:id="@+id/tvTotalWbc"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:text="@string/tabla_total_wbc"/>
+                <TextView
+                    android:id="@+id/tvTotalConNrbc"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:background="@color/gray"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1" />
+                <TextView
+                    android:id="@+id/tvTotalSinNRbc"
+                    android:textColor="@color/black"
+                    android:background="@color/gray_dark"
+                    android:gravity="center"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    />
+            </TableRow>
         </TableLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="12dp">
+
+            <Button
+                android:id="@+id/btnGuardar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="12dp"
+                style="@style/ButtonStyleGuardar"
+                android:layout_centerInParent="true"
+                android:drawableLeft="@android:drawable/ic_menu_save"
+                android:text="@string/guardar"/>
+
+            <Button
+                android:id="@+id/btnExportar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                style="@style/ButtonStyleExportar"
+                android:layout_centerInParent="true"
+                android:drawableLeft="@android:drawable/ic_menu_send"
+                android:text="@string/exportar"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
