--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,9 @@
 <resources>
     <!--Tamanio de textos-->
     <dimen name="titulo">20sp</dimen>
+    <dimen name="subtitulo_1">18sp</dimen>
+    <dimen name="subtitulo_2">16sp</dimen>
+    <dimen name="subtitulo_3">14sp</dimen>
+    <dimen name="subtitulo_4">12sp</dimen>
     <dimen name="cantidad">30sp</dimen>
 </resources>
