--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,23 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="ButtonStyleGuardar">
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:background">@drawable/button_background_guardar</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ButtonStyleExportar">
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:background">@drawable/button_background_exportar</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="HeaderStyle">
+        <item name="android:fontFamily">serif</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
