--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/margin_padding_16">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:weightSum="5"
             android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_centerInParent="true"
+
                 android:text="@string/cantidad_total"
                 android:textColor="@color/blue_dark"
                 android:textSize="@dimen/titulo"
                 android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/tvCantidad"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_centerInParent="true"
-                android:text="0"
+                android:text="@string/valor_cero"
                 android:textColor="@color/red80"
                 android:textSize="@dimen/cantidad"
                 android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btnResultado"
+                style="@style/ButtonStyleResultado"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                style="@style/ButtonStyleResultado"
-                android:layout_centerInParent="true"
+                android:drawableStart="@android:drawable/ic_menu_send"
                 android:drawableLeft="@android:drawable/ic_menu_send"
-                android:text="@string/resultado"/>
-            </LinearLayout>
+                android:text="@string/resultado" />
+        </LinearLayout>
+
+        <GridView
+
+            android:id="@+id/gvCelulas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="3"
+
+            />
+
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navView"
-        android:background="#E6E6E6"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="#E6E6E6"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/header_navigation_drawer"
-        app:menu="@menu/nav_options"
-        />
+        app:menu="@menu/nav_options" />
 </android.support.v4.widget.DrawerLayout>
