--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <!--Tamanio de textos-->
     <dimen name="titulo">20sp</dimen>
     <dimen name="cantidad">30sp</dimen>
+    <dimen name="margin_padding_16">15dp</dimen>
+    <dimen name="margin_padding_8">8dp</dimen>
 </resources>
