--- a/app/src/main/res/layout/activity_calculo.xml
+++ b/app/src/main/res/layout/activity_calculo.xml
@@ -40,11 +40,12 @@
                 style="@style/EditTextStyleOne"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_toLeftOf="@+id/btnCalcular"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:layout_toStartOf="@+id/btnCalcular"
+                android:layout_toLeftOf="@+id/btnCalcular"
                 android:hint="@string/input_cantidad_total"
-                android:inputType="phone" />
+                android:inputType="number" />
 
             <Button
                 android:id="@+id/btnCalcular"
