--- a/app/src/main/res/layout/item_celula.xml
+++ b/app/src/main/res/layout/item_celula.xml
@@ -1,29 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-   >
+    android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:background="#4cb369"
-        android:padding="@dimen/margin_padding_8"
-        android:layout_centerInParent="true">
-        <TextView
-            android:id="@+id/tvCantidadPorCelula"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true" />
+        android:layout_centerInParent="true"
+        android:layout_marginVertical="@dimen/margin_padding_8"
+        android:layout_marginTop="@dimen/margin_padding_8"
+        android:layout_marginBottom="@dimen/margin_padding_8">
 
-        <Button
-            android:id="@+id/btnNombreCelula"
+        <ImageView
+            android:id="@+id/ivIconoCelula"
+            style="@style/ButtonStyleCelula"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            style="@style/ButtonStyleCelula"
+            android:src="@mipmap/ic_logo_foreground" />
+
+        <TextView
+            android:id="@+id/tvNombreCelula"
+            style="@style/TextViewNombreCelula"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+
+
+            android:text=""
+             />
+
+        <TextView
+            android:id="@+id/tvCantidadPorCelula"
+            style="@style/TextViewCelulaCantidad"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:text="" />
+
+
     </RelativeLayout>
 
 </RelativeLayout>
