--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,15 @@
     <color name="gray">#E6E6E6</color>
     <color name="gray_dark">#aeb6bf</color>
 
+    <!--Bootstrap colors-->
+    <color name="primary">#007bff</color>
+    <color name="secondary">#6c757d</color>
+    <color name="success">#28a745</color>
+    <color name="danger">#dc3545</color>
+    <color name="warning">#ffc107</color>
+    <color name="info">#17a2b8</color>
+    <color name="light">#f8f9fa</color>
+    <color name="muted">#6c757d</color>
+    <color name="dark">#343a40</color>
+    <color name="body">#212529</color>
 </resources>
