--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,101 +5,112 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/margin_padding_16">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:weightSum="5"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:padding="@dimen/margin_padding_16">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:weightSum="12">
 
-                android:text="@string/cantidad_total"
-                android:textColor="@color/blue_dark"
-                android:textSize="@dimen/titulo"
-                android:textStyle="bold" />
+                <TextView
+                    style="@style/TextAppearance.AppCompat.Headline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8"
+                    android:text="@string/cantidad_total"
+                    android:textColor="@color/blue_dark" />
 
-            <TextView
-                android:id="@+id/tvCantidad"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/valor_cero"
-                android:textColor="@color/red80"
-                android:textSize="@dimen/cantidad"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/tvCantidad"
+                    style="@style/TextAppearance.AppCompat.Headline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:text="@string/valor_cero"
+                    android:textColor="@color/red"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/btnResultado"
-                style="@style/ButtonStyleResultado"
+                style="@style/ButtonPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:drawableStart="@android:drawable/ic_menu_send"
-                android:drawableLeft="@android:drawable/ic_menu_send"
-                android:text="@string/resultado" />
+                android:layout_gravity="end"
+                android:drawableStart="@drawable/baseline_send_white_18"
+                android:drawableLeft="@drawable/baseline_send_white_18"
+                android:text="@string/resultado"
+                android:layout_marginTop="@dimen/margin_padding_8"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginVertical="@dimen/margin_padding_8"
+                android:layout_marginTop="@dimen/margin_padding_8"
+                android:layout_marginBottom="@dimen/margin_padding_8"
+                android:background="@color/gray_dark" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="end">
+
+                <Button
+                    android:id="@+id/btnEliminarUltimo"
+                    style="@style/ButtonWarning"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/baseline_undo_black_18"
+                    android:drawableLeft="@drawable/baseline_undo_black_18"
+                    android:text="@string/eliminar_ultimo"
+                    />
+
+                <Button
+                    android:id="@+id/btnReiniciar"
+                    style="@style/ButtonDanger"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/baseline_delete_forever_white_18"
+                    android:drawableLeft="@drawable/baseline_delete_forever_white_18"
+                    android:text="@string/reiniciar"
+                    android:layout_marginStart="@dimen/margin_padding_8"
+                    android:layout_marginLeft="@dimen/margin_padding_8"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginVertical="@dimen/margin_padding_8"
+                android:layout_marginTop="@dimen/margin_padding_8"
+                android:layout_marginBottom="@dimen/margin_padding_8"
+                android:background="@color/gray_dark" />
+            <!--<GridView
+                android:id="@+id/gvCelulas"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:numColumns="3"
+
+                />-->
+            <LinearLayout
+                android:id="@+id/llCelulas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+
         </LinearLayout>
-
-
-
-        <View
-            android:layout_height="1dip"
-            android:layout_width="match_parent"
-            android:background="@color/gray_dark"
-            android:layout_marginBottom="2dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnEliminarUltimo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginRight="12dp"
-                style="@style/ButtonStyleExportar"
-                android:layout_centerInParent="true"
-                android:drawableLeft="@drawable/ic_last"
-                android:text="@string/eliminar_ultimo"/>
-
-            <Button
-                android:id="@+id/btnReiniciar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/ButtonStyleCancelar"
-                android:layout_centerInParent="true"
-                android:drawableLeft="@drawable/ic_reset"
-                android:text="@string/reiniciar"/>
-
-        </LinearLayout>
-        <View
-            android:layout_height="1dip"
-            android:layout_width="match_parent"
-            android:background="@color/gray_dark"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp"/>
-        <GridView
-
-            android:id="@+id/gvCelulas"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:numColumns="3"
-
-            />
-
-    </LinearLayout>
+    </ScrollView>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navView"
