--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -65,6 +65,23 @@
             android:drawableStart="@drawable/ic_search_white"
             android:drawableLeft="@drawable/ic_search_white"/>
 
+        <View
+            android:layout_height="1dip"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:background="@color/red80"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <View
+            android:layout_height="1dip"
+            android:layout_width="match_parent"
+            android:background="@color/red80"/>
+
     </LinearLayout>
 
 </ScrollView>
