--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -26,30 +26,34 @@
             android:orientation="horizontal"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:hint="YYYY-MM-dd"
-                android:id="@+id/etFechaIni"
+                android:background="@color/gray"
+                android:id="@+id/tvFechaIni"
                 />
             <ImageButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/btnFechaIni"
                 android:background="@color/transparent"
                 android:src="@android:drawable/ic_menu_my_calendar"/>
 
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:hint="YYYY-MM-dd"
-                android:id="@+id/etFechaFin"
+                android:background="@color/gray"
+                android:id="@+id/tvFechaFin"
                 />
             <ImageButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/btnFechaFin"
                 android:background="@color/transparent"
                 android:src="@android:drawable/ic_menu_my_calendar"/>
@@ -62,6 +66,7 @@
             android:id="@+id/btnBuscar"
             android:text="@string/buscar"
             style="@style/ButtonPrimary"
+            android:layout_marginTop="8dp"
             android:drawableStart="@drawable/ic_search_white"
             android:drawableLeft="@drawable/ic_search_white"/>
 
