--- a/app/src/main/res/layout/recicler_view_historial.xml
+++ b/app/src/main/res/layout/recicler_view_historial.xml
@@ -24,5 +24,11 @@
         android:gravity="center"
         android:layout_weight="2"
         />
+    <ImageButton
+        android:id="@+id/btnOpciones"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/transparent"
+        android:src="@drawable/ic_more_vert_black"/>
 
 </LinearLayout>
