Cambios en estilos

--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -9,16 +9,33 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:padding="@dimen/margin_padding_16"
         android:orientation="vertical">
 
-        <Spinner
-            android:id="@+id/spPaciente"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            />
+            android:layout_height="wrap_content">
+
+            <Spinner
+                android:id="@+id/spPaciente"
+                style="@style/Input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/margin_padding_6"
+                android:clickable="false"
+                android:contentDescription="@string/empty"
+                android:src="@drawable/baseline_arrow_drop_down_black_18" />
+        </RelativeLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
