--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -113,5 +113,17 @@
     <style name="ButtonDark" parent="ButtonTextWhite">
         <item name="android:background">@drawable/button_dark</item>
     </style>
+    <style name="Input">
+        <item name="android:background">@drawable/input</item>
+        <item name="android:paddingLeft">@dimen/margin_padding_12</item>
+        <item name="android:paddingRight">@dimen/margin_padding_12</item>
+        <item name="android:paddingTop">@dimen/margin_padding_8</item>
+        <item name="android:paddingBottom">@dimen/margin_padding_8</item>
+        <item name="android:paddingStart">@dimen/margin_padding_12</item>
+        <item name="android:paddingEnd">@dimen/margin_padding_12</item>
+        <item name="android:textColor">@color/body</item>
+        <item name="android:textColorHint">@color/muted</item>
+    </style>
+
     <!--Buttons Bootstrap-->
 </resources>
