--- a/app/src/main/res/layout/activity_calculo.xml
+++ b/app/src/main/res/layout/activity_calculo.xml
@@ -9,9 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:orientation="vertical">
+        android:paddingRight="16dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -23,11 +23,28 @@
             android:textSize="@dimen/subtitulo_3"
             android:textStyle="bold" />
 
-        <Spinner
-            android:id="@+id/spinnerPaciente"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content">
+
+            <Spinner
+                android:id="@+id/spinnerPaciente"
+                style="@style/Input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/margin_padding_6"
+                android:clickable="false"
+                android:contentDescription="@string/empty"
+                android:src="@drawable/baseline_arrow_drop_down_black_18" />
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -37,7 +54,7 @@
 
             <EditText
                 android:id="@+id/etCantidad"
-                style="@style/EditTextStyleOne"
+                style="@style/Input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -49,127 +66,135 @@
 
             <Button
                 android:id="@+id/btnCalcular"
+                style="@style/ButtonPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:text="@string/calcular"
-                style="@style/ButtonPrimary"
-                />
+                android:layout_marginStart="@dimen/margin_padding_8"
+                android:layout_marginLeft="@dimen/margin_padding_8"
+                android:text="@string/calcular" />
         </RelativeLayout>
 
         <ListView
             android:id="@+id/listViewHeaderTabla"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-        </ListView>
+            android:layout_height="wrap_content"></ListView>
+
         <View
-            android:layout_height="1dip"
             android:layout_width="match_parent"
-            android:background="@color/red80"/>
+            android:layout_height="1dip"
+            android:background="@color/red80" />
+
         <ListView
             android:id="@+id/listViewTabla"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginTop="2dp">
-        </ListView>
+            android:layout_marginTop="2dp"></ListView>
 
         <TableLayout
+            android:id="@+id/tablaResultado"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tablaResultado">
+            android:layout_height="wrap_content">
+
             <TableRow
-                android:layout_height="wrap_content"
+                android:id="@+id/tablaHeaderResultado"
                 android:layout_width="match_parent"
-                android:background="@color/blue"
-                android:id="@+id/tablaHeaderResultado">
+                android:layout_height="wrap_content"
+                android:background="@color/blue">
+
                 <TextView
                     android:id="@+id/tvVacio"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
                     style="@style/HeaderStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text=""/>
+                    android:text="" />
+
                 <TextView
                     android:id="@+id/tvConNrbc"
                     style="@style/HeaderStyle"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/tabla_header_con_nrbc"/>
+                    android:gravity="center"
+                    android:text="@string/tabla_header_con_nrbc" />
+
                 <TextView
                     android:id="@+id/tvSinNRbc"
                     style="@style/HeaderStyle"
-                    android:gravity="center"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/tabla_header_sin_nrbc"/>
+                    android:gravity="center"
+                    android:text="@string/tabla_header_sin_nrbc" />
             </TableRow>
+
             <View
-                android:layout_height="1dip"
                 android:layout_width="match_parent"
-                android:background="@color/red80"/>
+                android:layout_height="1dip"
+                android:background="@color/red80" />
+
             <TableRow
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
                 <TextView
                     android:id="@+id/tvTotalWbc"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textColor="@color/black"
                     android:gravity="center"
-                    android:text="@string/tabla_total_wbc"/>
+                    android:text="@string/tabla_total_wbc"
+                    android:textColor="@color/black" />
+
                 <TextView
                     android:id="@+id/tvTotalConNrbc"
-                    android:textColor="@color/black"
-                    android:gravity="center"
-                    android:background="@color/gray"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
-                    android:layout_weight="1" />
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/gray"
+                    android:gravity="center"
+                    android:textColor="@color/black" />
+
                 <TextView
                     android:id="@+id/tvTotalSinNRbc"
-                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:background="@color/gray_dark"
                     android:gravity="center"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    />
+                    android:textColor="@color/black" />
             </TableRow>
         </TableLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="12dp"
-            android:gravity="end">
+            android:gravity="end"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnGuardar"
+                style="@style/ButtonSuccess"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/ButtonSuccess"
-                android:drawableLeft="@drawable/baseline_save_white_18"
                 android:drawableStart="@drawable/baseline_save_white_18"
-                android:text="@string/guardar"/>
+                android:drawableLeft="@drawable/baseline_save_white_18"
+                android:text="@string/guardar" />
 
             <Button
                 android:id="@+id/btnExportar"
+                style="@style/ButtonSecondary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/ButtonSecondary"
-                android:drawableLeft="@drawable/baseline_save_alt_white_18"
-                android:drawableStart="@drawable/baseline_save_alt_white_18"
-                android:text="@string/exportar"
                 android:layout_marginStart="@dimen/margin_padding_8"
                 android:layout_marginLeft="@dimen/margin_padding_8"
-                />
+                android:drawableStart="@drawable/baseline_save_alt_white_18"
+                android:drawableLeft="@drawable/baseline_save_alt_white_18"
+                android:text="@string/exportar" />
 
         </LinearLayout>
     </LinearLayout>
