Cambios en colores y logotipo

--- a/app/src/main/res/layout/activity_ajuste.xml
+++ b/app/src/main/res/layout/activity_ajuste.xml
@@ -10,23 +10,27 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/margin_padding_16">
-
-
-
-            <CheckBox
-                android:id="@+id/checkBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/include_nrbc"
-                />
-
-
-
-
-        <CheckedTextView
-            android:id="@+id/checkedTextView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="CheckedTextView" />
+            android:layout_height="wrap_content">
+
+            <Spinner
+                android:id="@+id/spAlertarCantidad"
+                style="@style/Input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/margin_padding_6"
+                android:clickable="false"
+                android:contentDescription="@string/empty"
+                android:src="@drawable/baseline_arrow_drop_down_black_18" />
+        </RelativeLayout>
     </LinearLayout>
 </ScrollView>
