--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="top|bottom"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="28dp"
-        app:srcCompat="@mipmap/ic_logo_foreground"/>
+        app:srcCompat="@mipmap/ic_launcher"/>
 
     <TextView
         android:id="@+id/tvUserName"
